// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFeedback can have a feedback state 1`] = `
<div
  className="sc-aXZVg hNbjKD sc-gEvEer jUueUw sc-gEvEer jUueUw"
  role={null}
>
  Some feedback text.
</div>
`;

exports[`InputFeedback can have a feedback state 2`] = `
<div
  className="sc-aXZVg hNbjKD sc-gEvEer hTQEAH sc-gEvEer hTQEAH"
  role={null}
>
  Some feedback text.
</div>
`;

exports[`InputFeedback renders 1`] = `
<div
  class="sc-aXZVg hNbjKD sc-gEvEer jUueUw sc-gEvEer jUueUw"
>
  Some inputFeedback text.
</div>
`;
